--- a/about.html
+++ b/about.html
@@ -11,26 +11,34 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="banner">
-            <div class="navbar">
-                <img src="Images/512x512.png" class="logo">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="games.html">Games</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-            <div class = "aboutus">
-                <img src="Images/thumb_nov22_03.jpg" alt="About Us" class="bannerimg" height="300" width="1000">
+        <div class="navbar">
+            <img src="Images/512x512.png" class="logo">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="games.html">Games</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+         </div>
+         <div class = "aboutus">
+            <img src="Images/thumb_nov22_03.jpg" alt="About Us" class="bannerimg" height="300" width="1000">
                 <div class="centered">
-                    <h1>About us</h1>
-                </div>
+                <h1>About us</h1>
             </div>
-            <div class="bio">
-                <p>At <b>Moonlight Studios</b>, we believe in the magic of gaming. With standout titles such as <b>Clonescape</b> and <b>Super Pet Figher</b>, we've established a reputation for delivering unique and enjoyable experiences. Every game we create is a testament to our passion for storytelling, innovative mechanics, and captivating design. Dive into our diverse world of games and discover the dedication and creativity behind every play. Join us on this digital adventure, and let's craft memorable moments together!</p>
-            </div>
-
         </div>
+        <div class="bio">
+            <p>At <b>Moonlight Studios</b>, we believe in the magic of gaming. With standout titles such as <b>Clonescape</b> and <b>Super Pet Figher</b>, we've established a reputation for delivering unique and enjoyable experiences. Every game we create is a testament to our passion for storytelling, innovative mechanics, and captivating design. Dive into our diverse world of games and discover the dedication and creativity behind every play. Join us on this digital adventure, and let's craft memorable moments together!</p>
+        </div>
+
+        <footer>
+            <p> 
+                <a href="https://twitter.com/Moonlight2510_" style="text-decoration: none;"><b>Twitter</b></a>
+                <a href="https://twitter.com/Moonlight2510_" style="text-decoration: none;"><b>YouTube</b></a>
+                <a href="https://twitter.com/Moonlight2510_" style="text-decoration: none;"><b>Itch.io</b></a>
+                <a href="https://twitter.com/Moonlight2510_" style="text-decoration: none;"><b>Discord</b></a>
+            </p>
+            <a href=""></a>
+            <p>©Moonlight Studios 2021-2023. All Rights Reserved.</p>
+        </footer>
     </body>
 </html>
