--- a/games.html
+++ b/games.html
@@ -9,18 +9,40 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/176086dfe1.js" crossorigin="anonymous"></script>
+
     </head>
     <body>
-        <div class="banner">
-            <div class="navbar">
-                <img src="Images/512x512.png" class="logo">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="games.html">Games</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
+        <div class="navbar">
+            <img src="Images/512x512.png" class="logo">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="games.html">Games</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+
+        <div class = "gallery">
+            <a href="https://moonlight-studios2510.itch.io/super-pet-fighter-re-hamstered-editiondemo"><img src="Images/SupetPetFighter.gif" alt="" width="450"></a>
+            <div class="description">            
+                <a href="https://moonlight-studios2510.itch.io/super-pet-fighter-re-hamstered-editiondemo">Super Pet Figher: Re-hamstered Edition</a>
+
             </div>
         </div>
+
+        <div style="background-color: #4a9bff;">
+            <br>
+        </div>
+        <footer>
+            <p> 
+                <a href="https://twitter.com/Moonlight2510_"><i class="fa-brands fa-twitter fa-2xl" style="color: #8cd8f8;"></i></a>
+                <a href="https://www.youtube.com/channel/UCvBD0QYZ_PqReG_xcFtlzKw"><i class="fa-brands fa-youtube fa-2xl" style="color: #ff0000;"></i></i></i></a>
+                <a href="https://moonlight-studios2510.itch.io/"><i class="fa-brands fa-itch-io fa-2xl" style="color: #e25057;"></i></a>
+                <a href="https://discord.gg/EyfhcEMz"><i class="fa-brands fa-discord fa-2xl" style="color: #5865f2;"></i></a>
+            </p>
+            <a href=""></a>
+            <p>©Moonlight Studios 2021-2023. All Rights Reserved.</p>
+        </footer>
     </body>
 </html>
