--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="banner">
-            <div class="navbar">
-                <img src="Images/512x512.png" class="logo">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="games.html">Games</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
+        <div class="navbar">
+            <img src="Images/512x512.png" class="logo">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="games.html">Games</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </div>
+
+        <footer>
+            <a href="https://twitter.com/Moonlight2510_" style="text-decoration: none;">Twitter</a>
+        </footer>
     </body>
 </html>
