--- a/games.html
+++ b/games.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Moonlight Studios</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="Images/512x512.png">
+        <link rel="icon" href="Images/studiosfavicon.png">
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,25 +13,29 @@
 
     </head>
     <body>
-        <div class="navbar">
-            <img src="Images/512x512.png" class="logo">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="games.html">Games</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-
-        <div class = "gallery">
-            <a href="https://moonlight-studios2510.itch.io/super-pet-fighter-re-hamstered-editiondemo"><img src="Images/SupetPetFighter.gif" alt="" width="450"></a>
-            <div class="description">            
-                <a href="https://moonlight-studios2510.itch.io/super-pet-fighter-re-hamstered-editiondemo">Super Pet Figher: Re-hamstered Edition</a>
-
+        <header>
+            <div class="navbar">
+                <img src="Images/512x512.png" class="logo">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="games.html">Games</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
             </div>
-        </div>
+        </header>
 
-        <div style="background-color: #4a9bff;">
+        <main>
+            <div class = "gallery">
+                <a href="https://moonlight-studios2510.itch.io/super-pet-fighter-re-hamstered-editiondemo"><img src="Images/SupetPetFighter.gif" alt="" width="450"></a>
+                <div class="description">            
+                    <a href="https://moonlight-studios2510.itch.io/super-pet-fighter-re-hamstered-editiondemo"><b>Super Pet Figher: Re-hamstered Edition</b></a>
+                    <p style="color: #414547;">Unleash your skills in "Super Pet Fighter: Re-hamstered Edition." Battle using Rock Paper Scissors, pick from four pets, and compete against 15+ rivals. Strengthen your bond or risk the pound. Ready to be the champion?</p>
+                </div>
+            </div>
+        </main>
+
+        <div style="background-color: #4498ff;">
             <br>
         </div>
         <footer>
