--- a/about.html
+++ b/about.html
@@ -4,22 +4,27 @@
         <meta charset="UTF-8">
         <title>Moonlight Studios</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="Images/512x512.png">
+        <link rel="icon" href="Images/studiosfavicon.png">
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/176086dfe1.js" crossorigin="anonymous"></script>
+
     </head>
     <body>
-        <div class="navbar">
-            <img src="Images/512x512.png" class="logo">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="games.html">Games</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-         </div>
+        <header>
+            <div class="navbar">
+                <img src="Images/512x512.png" class="logo">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="games.html">Games</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </header>
+        
          <div class = "aboutus">
             <img src="Images/thumb_nov22_03.jpg" alt="About Us" class="bannerimg" height="300" width="1000">
                 <div class="centered">
@@ -27,15 +32,20 @@
             </div>
         </div>
         <div class="bio">
-            <p>At <b>Moonlight Studios</b>, we believe in the magic of gaming. With standout titles such as <b>Clonescape</b> and <b>Super Pet Figher</b>, we've established a reputation for delivering unique and enjoyable experiences. Every game we create is a testament to our passion for storytelling, innovative mechanics, and captivating design. Dive into our diverse world of games and discover the dedication and creativity behind every play. Join us on this digital adventure, and let's craft memorable moments together!</p>
+            <p>
+                <b>Moonlight Studios</b> is an independent game development team. Our titles, such as <b>Clonescape</b> and <b>Super Pet Fighter</b>, showcase our straightforward approach to gaming. As we continue to grow, our commitment to quality remains unwavering. We're excited for you to be part of our expanding gaming journey. Dive in and see what we have to offer.
+            </p>
         </div>
 
+        <div style="background-color: #4498ff;">
+            <br>
+        </div>
         <footer>
             <p> 
-                <a href="https://twitter.com/Moonlight2510_" style="text-decoration: none;"><b>Twitter</b></a>
-                <a href="https://twitter.com/Moonlight2510_" style="text-decoration: none;"><b>YouTube</b></a>
-                <a href="https://twitter.com/Moonlight2510_" style="text-decoration: none;"><b>Itch.io</b></a>
-                <a href="https://twitter.com/Moonlight2510_" style="text-decoration: none;"><b>Discord</b></a>
+                <a href="https://twitter.com/Moonlight2510_"><i class="fa-brands fa-twitter fa-2xl" style="color: #8cd8f8;"></i></a>
+                <a href="https://www.youtube.com/channel/UCvBD0QYZ_PqReG_xcFtlzKw"><i class="fa-brands fa-youtube fa-2xl" style="color: #ff0000;"></i></i></i></a>
+                <a href="https://moonlight-studios2510.itch.io/"><i class="fa-brands fa-itch-io fa-2xl" style="color: #e25057;"></i></a>
+                <a href="https://discord.gg/EyfhcEMz"><i class="fa-brands fa-discord fa-2xl" style="color: #5865f2;"></i></a>
             </p>
             <a href=""></a>
             <p>©Moonlight Studios 2021-2023. All Rights Reserved.</p>
