--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,15 @@
         <meta charset="UTF-8">
         <title>Moonlight Studios</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="Images/512x512.png">
+        <link rel="icon" href="Images/studiosfavicon.png">
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/176086dfe1.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="banner">
+        <header>
             <div class="navbar">
                 <img src="Images/512x512.png" class="logo">
                 <ul>
@@ -21,6 +22,20 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
+        </header>
+
+        <div style="background-color: #4498ff;">
+            <br>
         </div>
+        <footer>
+            <p> 
+                <a href="https://twitter.com/Moonlight2510_"><i class="fa-brands fa-twitter fa-2xl" style="color: #8cd8f8;"></i></a>
+                <a href="https://www.youtube.com/channel/UCvBD0QYZ_PqReG_xcFtlzKw"><i class="fa-brands fa-youtube fa-2xl" style="color: #ff0000;"></i></i></i></a>
+                <a href="https://moonlight-studios2510.itch.io/"><i class="fa-brands fa-itch-io fa-2xl" style="color: #e25057;"></i></a>
+                <a href="https://discord.gg/EyfhcEMz"><i class="fa-brands fa-discord fa-2xl" style="color: #5865f2;"></i></a>
+            </p>
+            <a href=""></a>
+            <p>©Moonlight Studios 2021-2023. All Rights Reserved.</p>
+        </footer>
     </body>
 </html>
