--- a/games.html
+++ b/games.html
@@ -46,7 +46,7 @@
                 <a href="https://discord.gg/EyfhcEMz"><i class="fa-brands fa-discord fa-2xl" style="color: #5865f2;"></i></a>
             </p>
             <a href=""></a>
-            <p>©Moonlight Studios 2021-2023. All Rights Reserved.</p>
+            <p style="color: #414547;">©Moonlight Studios 2021-2023. All Rights Reserved.</p>
         </footer>
     </body>
 </html>
