--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Moonlight Studios</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="Images/studiosfavicon.png">
+        <link rel="icon" href="Images/favicon.ico">
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,12 +24,12 @@
             </div>
         </header>
 
-        <div style="background-color: #4498ff;">
+        <div style="background-color: #7a7a7a;">
             <br>
         </div>
         <footer>
             <p> 
-                <a href="https://twitter.com/Moonlight2510_"><i class="fa-brands fa-twitter fa-2xl" style="color: #80d9ff;"></i></a>
+                <a href="https://twitter.com/Moonlight2510_"><i class="fa-brands fa-x-twitter fa-2xl" style="color: #000000;"></i></a>
                 <a href="https://www.youtube.com/channel/UCvBD0QYZ_PqReG_xcFtlzKw"><i class="fa-brands fa-youtube fa-2xl" style="color: #ff0000;"></i></i></i></a>
                 <a href="https://moonlight-studios2510.itch.io/"><i class="fa-brands fa-itch-io fa-2xl" style="color: #e25057;"></i></a>
                 <a href="https://discord.gg/EyfhcEMz"><i class="fa-brands fa-discord fa-2xl" style="color: #5865f2;"></i></a>
