--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@
             </div>
         </header>
 
-        <div style="background-color: #7a7a7a;">
+        <section class="container">
+            <div class="slider-wrapper">
+                <div class="slider">
+                    <img id = "slide1" src="Images/PbSGmS.png" alt="Super Pet Fighter">
+                    <img id = "slide2" src="Images/pSv3JE.png" alt="">
+                </div> 
+                <div class="slider-nav">
+                    <a href="#slide1"></a>
+                    <a href="#slide2"></a>
+                </div>
+            </div>
+        </section>
+
+        <div style="background-color: hsl(210, 99%, 58%);">
             <br>
         </div>
         <footer>
