--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         </header>
         
          <div class = "aboutus">
-            <img src="Images/thumb_nov22_03.jpg" alt="About Us" class="bannerimg" height="300" width="1000">
+            <img src="Images/thumb_nov22_03.jpg" alt="About Us" class="bannerimg" height="300">
                 <div class="centered">
                 <h1>About us</h1>
             </div>
@@ -37,7 +37,7 @@
             </p>
         </div>
 
-        <div style="background-color: #7a7a7a;">
+        <div style="background-color: hsl(210, 99%, 58%);">
             <br>
         </div>
         <footer>
