--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             </div>
         </header>
 
-        <div style="background-color: #7a7a7a;">
+        <div style="background-color: hsl(210, 99%, 58%);">
             <br>
         </div>
         <footer>
