--- a/games.html
+++ b/games.html
@@ -27,23 +27,34 @@
 
         <main>
             <div class = "gallery">
-                <a href="https://moonlight-studios2510.itch.io/super-pet-fighter-re-hamstered-editiondemo"><img src="Images/SupetPetFighter.gif" alt="" width="450"></a>
-                <div class="description">            
-                    <a href="https://moonlight-studios2510.itch.io/super-pet-fighter-re-hamstered-editiondemo"><b>Super Pet Figher: Re-hamstered Edition</b></a>
-                    <p style="color: #414547;">Unleash your skills in "Super Pet Fighter: Re-hamstered Edition." Battle using Rock Paper Scissors, pick from four pets, and compete against 15+ rivals. Strengthen your bond or risk the pound. Ready to be the champion?</p>
+                <div class="image-container">
+                    <a href="https://moonlight-studios2510.itch.io/super-pet-fighter-re-hamstered-editiondemo"><img src="Images/SupetPetFighter.gif" alt="" width="450"></a>
+                    <div class="description">            
+                        <a href="https://moonlight-studios2510.itch.io/super-pet-fighter-re-hamstered-editiondemo"><b>Super Pet Figher: Re-hamstered Edition</b></a>
+                        <p style="color: #414547;">Unleash your skills in "Super Pet Fighter: Re-hamstered Edition." Battle using Rock Paper Scissors, pick from four pets, and compete against 15+ rivals. Strengthen your bond or risk the pound. Ready to be the champion?</p>
+                    </div>
+                </div>
+
+                <div class="image-container">
+                    <a href="https://moonlight-studios2510.itch.io/clonescape"><img src="Images/Clonescape.png" alt="" width="450"></a>
+                    <div class="description">            
+                        <a href="https://moonlight-studios2510.itch.io/clonescape"><b>Clonescape</b></a>
+                        <p style="color: #414547;">Unleash your skills in "Super Pet Fighter: Re-hamstered Edition." Battle using Rock Paper Scissors, pick from four pets, and compete against 15+ rivals. Strengthen your bond or risk the pound. Ready to be the champion?</p>
+                    </div>
+                </div>
+
+
+
+                <div class="image-container">
+                    <a href="https://moonlight-studios2510.itch.io/clonescape"><img src="Images/Clonescape.png" alt="" width="450"></a>
+                    <div class="description">            
+                        <a href="https://moonlight-studios2510.itch.io/clonescape"><b>Clonescape</b></a>
+                        <p style="color: #414547;">Unleash your skills in "Super Pet Fighter: Re-hamstered Edition." Battle using Rock Paper Scissors, pick from four pets, and compete against 15+ rivals. Strengthen your bond or risk the pound. Ready to be the champion?</p>
+                    </div>
                 </div>
             </div>
 
-            <div class = "gallery">
-                <a href="https://moonlight-studios2510.itch.io/clonescape"><img src="Images/Clonescape.png" alt="" width="450"></a>
-                <div class="description">            
-                    <a href="https://moonlight-studios2510.itch.io/clonescape"><b>Clonescape</b></a>
-                    <p style="color: #414547;">Unleash your skills in "Super Pet Fighter: Re-hamstered Edition." Battle using Rock Paper Scissors, pick from four pets, and compete against 15+ rivals. Strengthen your bond or risk the pound. Ready to be the champion?</p>
-                </div>
-            </div>
-        </main>
-
-        <div style="background-color: hsl(210, 99%, 58%);">
+        <div style="background-color: #0080ff;">
             <br>
         </div>
         <footer>
