--- a/index.html
+++ b/index.html
@@ -24,18 +24,26 @@
             </div>
         </header>
 
+
         <section class="container">
             <div class="slider-wrapper">
                 <div class="slider">
-                    <img id = "slide1" src="Images/PbSGmS.png" alt="Super Pet Fighter">
-                    <img id = "slide2" src="Images/pSv3JE.png" alt="">
+                    <div class="slide">
+                        <div class="slide-title"><a href="https://youtube.com">Super Pet Fighter</a></div>
+                        <img id = "slide1" src="Images/PbSGmS.png" alt="Super Pet Fighter">
+                    </div>
+                    <div class="slide">
+                        <div class="slide-title"><a href="https://youtube.com">Super awdawdFighter</a></div>
+                        <img id = "slide2" src="Images/pSv3JE.png" alt="">
+                    </div>
+                    <div class="slider-nav">
+                        <a href="#slide1"></a>
+                        <a href="#slide2"></a>
+                    </div>
                 </div> 
-                <div class="slider-nav">
-                    <a href="#slide1"></a>
-                    <a href="#slide2"></a>
-                </div>
             </div>
         </section>
+
 
         <div style="background-color: hsl(210, 99%, 58%);">
             <br>
