--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             </p>
         </div>
 
-        <div style="background-color: hsl(210, 99%, 58%);">
+        <div style="background-color: #535353;">
             <br>
         </div>
         <footer>
