--- a/games.html
+++ b/games.html
@@ -39,23 +39,13 @@
                     <a href="https://moonlight-studios2510.itch.io/clonescape"><img src="Images/Clonescape.png" alt="" width="450"></a>
                     <div class="description">            
                         <a href="https://moonlight-studios2510.itch.io/clonescape"><b>Clonescape</b></a>
-                        <p style="color: #414547;">Unleash your skills in "Super Pet Fighter: Re-hamstered Edition." Battle using Rock Paper Scissors, pick from four pets, and compete against 15+ rivals. Strengthen your bond or risk the pound. Ready to be the champion?</p>
-                    </div>
-                </div>
-
-
-
-                <div class="image-container">
-                    <a href="https://moonlight-studios2510.itch.io/clonescape"><img src="Images/Clonescape.png" alt="" width="450"></a>
-                    <div class="description">            
-                        <a href="https://moonlight-studios2510.itch.io/clonescape"><b>Clonescape</b></a>
-                        <p style="color: #414547;">Unleash your skills in "Super Pet Fighter: Re-hamstered Edition." Battle using Rock Paper Scissors, pick from four pets, and compete against 15+ rivals. Strengthen your bond or risk the pound. Ready to be the champion?</p>
+                        <p style="color: #414547;">Step into "Clonescape", a realm of bewildering platforms and mind-bending puzzles. Rely on switches to chart your path and pierce the mystery of your surroundings. What truths await your discovery? Dive in and find out.</p>
                     </div>
                 </div>
             </div>
 
-        <div style="background-color: #0080ff;">
-            <br>
+            <div style="background-color: #535353;">
+                <br>
         </div>
         <footer>
             <p> 
