--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <div class="slider-wrapper">
                 <div class="slider">
                     <div class="slide">
-                        <div class="slide-title"><a href="https://youtube.com">Super Pet Fighter</a></div>
-                        <img id = "slide1" src="Images/PbSGmS.png" alt="Super Pet Fighter">
+                        <div class="slide-title"><a href="https://moonlight-studios2510.itch.io/super-pet-fighter-re-hamstered-editiondemo">Super Pet Fighter</a></div>
+                        <img id = "slide1" src="Images/IVnbmf.png" alt="Super Pet Fighter">
                     </div>
                     <div class="slide">
-                        <div class="slide-title"><a href="https://youtube.com">Super awdawdFighter</a></div>
+                        <div class="slide-title"><a href="https://moonlight-studios2510.itch.io/clonescape">Clonescape</a></div>
                         <img id = "slide2" src="Images/pSv3JE.png" alt="">
                     </div>
                     <div class="slider-nav">
@@ -45,7 +45,7 @@
         </section>
 
 
-        <div style="background-color: hsl(210, 99%, 58%);">
+        <div style="background-color: #535353;">
             <br>
         </div>
         <footer>
