--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </header>
 
-
+        <a href="https://gd.games/instant-builds/e8d75752-de79-4bf3-8b5a-33ebf0c26ff4"></a>
         <section class="container">
             <div class="slider-wrapper">
                 <div class="slider">
