--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="navbar">
-                <img src="Images/512x512.png" class="logo">
+                <a href="https://moonlightstudios.net"><img src="Images/512x512.png" class="logo"></a>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="games.html">Games</a></li>
