--- a/index.html
+++ b/index.html
@@ -1,63 +1,39 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Moonlight Studios</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/png" href="Images/favicon.png">
-        <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/176086dfe1.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header>
-            <div class="navbar">
-                <a href="https://moonlightstudios.net"><img src="Images/512x512.png" class="logo"></a>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="games.html">Games</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </header>
-        <a href="https://gd.games/instant-builds/29f772d4-0007-4249-b011-79e0ee89ceee"></a>
+<html lang="en">
+<head>
+    <script src="https://kit.fontawesome.com/176086dfe1.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="Images/FavIcon.ico">
+    <link rel="stylesheet" href="style.css">
+    <title>Moonlight Studios</title>
+</head>
+<body>
+    <header>
+        <a href="index.html"><img class="logo"src="Images/Icon.png" alt="Logo"></a>
+        <nav>
+            <ul class="navbar">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="">News</a></li>
+                <li><a href="">Games</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><button class="nav_button" href="https://google.com">Contact us</button></li>
+            </ul>
+        </nav>
+    </header>
 
-        <a href="https://gd.games/instant-builds/e8d75752-de79-4bf3-8b5a-33ebf0c26ff4"></a>
-        <section class="container">
-            <div class="slider-wrapper">
-                <div class="slider">
-                    <div class="slide">
-                        <div class="slide-title"><a href="https://moonlight-studios2510.itch.io/super-pet-fighter-re-hamstered-editiondemo">Super Pet Fighter</a></div>
-                        <img id = "slide1" src="Images/IVnbmf.png" alt="Super Pet Fighter">
-                    </div>
-                    <div class="slide">
-                        <div class="slide-title"><a href="https://moonlight-studios2510.itch.io/clonescape">Clonescape</a></div>
-                        <img id = "slide2" src="Images/pSv3JE.png" alt="">
-                    </div>
-                    <div class="slider-nav">
-                        <a href="#slide1"></a>
-                        <a href="#slide2"></a>
-                    </div>
-                </div> 
-            </div>
-        </section>
+    <section>
 
-
-        <div style="background-color: #535353;">
-            <br>
-        </div>
-        <footer>
-            <p> 
-                <a href="https://twitter.com/Moonlight2510_"><i class="fa-brands fa-x-twitter fa-2xl" style="color: #000000;"></i></a>
-                <a href="https://www.youtube.com/channel/UCvBD0QYZ_PqReG_xcFtlzKw"><i class="fa-brands fa-youtube fa-2xl" style="color: #ff0000;"></i></i></i></a>
-                <a href="https://moonlight-studios2510.itch.io/"><i class="fa-brands fa-itch-io fa-2xl" style="color: #e25057;"></i></a>
-                <a href="https://discord.gg/EyfhcEMz"><i class="fa-brands fa-discord fa-2xl" style="color: #5865f2;"></i></a>
-            </p>
-            <a href=""></a>
-            <p>©Moonlight Studios 2021-2023. All Rights Reserved.</p>
-        </footer>
-    </body>
+    </section>
+    
+    <footer>
+        <a href="https://discord.gg/CT4EWhXq" target="_blank"><i class="fa-brands fa-discord fa-xl" id="discord"></i></a>
+        <a href="https://twitter.com/Moonlight2510_" target="_blank"><i class="fa-brands fa-twitter fa-xl" id="twitter"></i></a>
+        <a href="https://www.instagram.com/moonlight.studios2510/" target="_blank"><i class="fa-brands fa-instagram fa-xl" id="instagram"></i></a>
+        <a href="https://www.youtube.com/@moonlightstudios2510" target="_blank"><i class="fa-brands fa-youtube fa-xl" id="youtube"></i></a>
+        <p class="footer_text">
+            ©Moonlight Studios 2021-2024. All Rights Reserved.
+        </p>
+    </footer>
+</body>
 </html>
