--- a/about.html
+++ b/about.html
@@ -1,54 +1,39 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Moonlight Studios</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/png" href="Images/favicon.png">
-        <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/176086dfe1.js" crossorigin="anonymous"></script>
+<html lang="en">
+<head>
+    <script src="https://kit.fontawesome.com/176086dfe1.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="Images/FavIcon.ico">
+    <link rel="stylesheet" href="style.css">
+    <title>Moonlight Studios</title>
+</head>
+<body>
+    <header>
+        <a href="index.html"><img class="logo"src="Images/Icon.png" alt="Logo"></a>
+        <nav>
+            <ul class="navbar">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="">News</a></li>
+                <li><a href="">Games</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><button class="nav_button" href="https://google.com">Contact us</button></li>
+            </ul>
+        </nav>
+    </header>
 
-    </head>
-    <body>
-        <header>
-            <div class="navbar">
-                <img src="Images/512x512.png" class="logo">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="games.html">Games</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </header>
-        
-         <div class = "aboutus">
-            <img src="Images/thumb_nov22_03.jpg" alt="About Us" class="bannerimg" height="300">
-                <div class="centered">
-                <h1>About us</h1>
-            </div>
-        </div>
-        <div class="bio">
-            <p>
-                <b>Moonlight Studios</b> is an independent game development team. Our titles, such as <b>Clonescape</b> and <b>Super Pet Fighter</b>, showcase our straightforward approach to gaming. As we continue to grow, our commitment to quality remains unwavering. We're excited for you to be part of our expanding gaming journey. Dive in and see what we have to offer.
-            </p>
-        </div>
-
-        <div style="background-color: #535353;">
-            <br>
-        </div>
-        <footer>
-            <p> 
-                <a href="https://twitter.com/Moonlight2510_"><i class="fa-brands fa-x-twitter fa-2xl" style="color: #000000;"></i></a>
-                <a href="https://www.youtube.com/channel/UCvBD0QYZ_PqReG_xcFtlzKw"><i class="fa-brands fa-youtube fa-2xl" style="color: #ff0000;"></i></i></i></a>
-                <a href="https://moonlight-studios2510.itch.io/"><i class="fa-brands fa-itch-io fa-2xl" style="color: #e25057;"></i></a>
-                <a href="https://discord.gg/EyfhcEMz"><i class="fa-brands fa-discord fa-2xl" style="color: #5865f2;"></i></a>
-            </p>
-            <a href=""></a>
-            <p>©Moonlight Studios 2021-2023. All Rights Reserved.</p>
-        </footer>
-    </body>
+    <h1 class="title">Who are we?</h1>
+    <p class="text">Welcome to Moonlight Studios, an independent game development studio based in the heart of Serbia. Our passion for gaming drives us to create unforgettable experiences, exemplified by our standout titles, "Super Pet Fighter" and "Clonescape."</p>
+    <p class="text">We were founded in 2021 by two friends who shared a profound passion for creating video games. We take pride in our distinctive style and unwavering commitment to quality. "Super Pet Fighter" and "Clonescape" are just the beginning, showcasing our dedication to crafting games that resonate with players. As we grow, we continue to explore new dimensions, pushing the boundaries of creativity.</p>
+    
+    <footer>
+        <a href="https://discord.gg/CT4EWhXq" target="_blank"><i class="fa-brands fa-discord fa-xl" id="discord"></i></a>
+        <a href="https://twitter.com/Moonlight2510_" target="_blank"><i class="fa-brands fa-twitter fa-xl" id="twitter"></i></a>
+        <a href="https://www.instagram.com/moonlight.studios2510/" target="_blank"><i class="fa-brands fa-instagram fa-xl" id="instagram"></i></a>
+        <a href="https://www.youtube.com/@moonlightstudios2510" target="_blank"><i class="fa-brands fa-youtube fa-xl" id="youtube"></i></a>
+        <p class="footer_text">
+            ©Moonlight Studios 2021-2024. All Rights Reserved.
+        </p>
+    </footer>
+</body>
 </html>
