--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Moonlight Studios</title>
 </head>
-<body>
-    <header>
+<body style="background-color: rgb(53, 0, 154);">
+    <header id="about_header">
         <a href="index.html"><img class="logo"src="Images/Icon.png" alt="Logo"></a>
         <nav>
             <ul class="navbar">
@@ -21,12 +21,15 @@
             </ul>
         </nav>
     </header>
+    <section class="about_background">
+        <div class="text_about">
+            <h1 class="title">Who are we?</h1>
+            <p class="text">Welcome to Moonlight Studios, an independent game development studio based in the heart of Serbia. Our passion for gaming drives us to create unforgettable experiences, exemplified by our standout titles, "Super Pet Fighter" and "Clonescape."</p>
+            <p class="text">We were founded in 2021 by two friends who shared a profound passion for creating video games. Underlying our distinct style and unwavering commitment to quality are the foundations laid by our founders. "Super Pet Fighter" and "Clonescape" are testament to the dedication we pour into crafting games that resonate with players. As we evolve, our commitment to pushing creative boundaries remains steadfast. As we expand our horizons, we invite you to join the community we've built at Moonlight Studios. </p>   
+        </div>       
+    </section>
 
-    <h1 class="title">Who are we?</h1>
-    <p class="text">Welcome to Moonlight Studios, an independent game development studio based in the heart of Serbia. Our passion for gaming drives us to create unforgettable experiences, exemplified by our standout titles, "Super Pet Fighter" and "Clonescape."</p>
-    <p class="text">We were founded in 2021 by two friends who shared a profound passion for creating video games. We take pride in our distinctive style and unwavering commitment to quality. "Super Pet Fighter" and "Clonescape" are just the beginning, showcasing our dedication to crafting games that resonate with players. As we grow, we continue to explore new dimensions, pushing the boundaries of creativity.</p>
-    
-    <footer>
+    <footer id="about_footer">
         <a href="https://discord.gg/CT4EWhXq" target="_blank"><i class="fa-brands fa-discord fa-xl" id="discord"></i></a>
         <a href="https://twitter.com/Moonlight2510_" target="_blank"><i class="fa-brands fa-twitter fa-xl" id="twitter"></i></a>
         <a href="https://www.instagram.com/moonlight.studios2510/" target="_blank"><i class="fa-brands fa-instagram fa-xl" id="instagram"></i></a>
