--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
         <div class="text_about">
             <h1 class="title">Who are we?</h1>
             <p class="text">Welcome to Moonlight Studios, an independent game development studio based in the heart of Serbia. Our passion for gaming drives us to create unforgettable experiences, exemplified by our standout titles, "Super Pet Fighter" and "Clonescape."</p>
+            <h1 class="title">About us</h1>            
             <p class="text">We were founded in 2021 by two friends who shared a profound passion for creating video games. Underlying our distinct style and unwavering commitment to quality are the foundations laid by our founders. "Super Pet Fighter" and "Clonescape" are testament to the dedication we pour into crafting games that resonate with players. As we evolve, our commitment to pushing creative boundaries remains steadfast. As we expand our horizons, we invite you to join the community we've built at Moonlight Studios. </p>   
         </div>       
     </section>
@@ -34,6 +35,7 @@
         <a href="https://twitter.com/Moonlight2510_" target="_blank"><i class="fa-brands fa-twitter fa-xl" id="twitter"></i></a>
         <a href="https://www.instagram.com/moonlight.studios2510/" target="_blank"><i class="fa-brands fa-instagram fa-xl" id="instagram"></i></a>
         <a href="https://www.youtube.com/@moonlightstudios2510" target="_blank"><i class="fa-brands fa-youtube fa-xl" id="youtube"></i></a>
+        <a href="https://moonlight-studios2510.itch.io/" target="_blank"><i class="fa-brands fa-itch-io fa-xl" id="itch"></i></a>       
         <p class="footer_text">
             ©Moonlight Studios 2021-2024. All Rights Reserved.
         </p>
