--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <a href="https://twitter.com/Moonlight2510_" target="_blank"><i class="fa-brands fa-twitter fa-xl" id="twitter"></i></a>
         <a href="https://www.instagram.com/moonlight.studios2510/" target="_blank"><i class="fa-brands fa-instagram fa-xl" id="instagram"></i></a>
         <a href="https://www.youtube.com/@moonlightstudios2510" target="_blank"><i class="fa-brands fa-youtube fa-xl" id="youtube"></i></a>
+        <a href="https://moonlight-studios2510.itch.io/" target="_blank"><i class="fa-brands fa-itch-io fa-xl" id="itch"></i></a>
         <p class="footer_text">
             ©Moonlight Studios 2021-2024. All Rights Reserved.
         </p>
