--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <a href="index.html"><img class="logo"src="Images/Icon.png" alt="Logo"></a>
         <nav>
             <ul class="navbar">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="./index">Home</a></li>
                 <li><a href="">News</a></li>
                 <li><a href="">Games</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="./about">About</a></li>
                 <li><button class="nav_button" href="https://google.com">Contact us</button></li>
             </ul>
         </nav>
