--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
 </head>
 <body style="background-color: rgb(53, 0, 154);">
     <header id="about_header">
-        <a href="index.html"><img class="logo"src="Images/Icon.png" alt="Logo"></a>
+        <a href="https://moonlightstudios.net"><img class="logo"src="Images/Icon.png" alt="Logo"></a>
         <nav>
             <ul class="navbar">
-                <li><a href="./index">Home</a></li>
+                <li><a href="https://moonlightstudios.net">Home</a></li>
                 <li><a href="">News</a></li>
                 <li><a href="">Games</a></li>
                 <li><a href="./about">About</a></li>
