--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                 <div class="w-full lg:w-1/2">
                     <span class="text-sm font-medium text-indigo-400 uppercase tracking-widest mb-2 block">Available 7th December 2025.</span>
-                    <h2 class="text-4xl sm:text-5xl md:text-6xl font-extrabold tracking-tight text-indigo-400 moon-glow">
+                    <h2 class="text-4xl sm:text-5xl md:text-6xl font-extrabold tracking-tight">
                         Wizardsbane
                     </h2>
 
@@ -292,3 +292,4 @@ Moonlight Studios creates focused, story-first games. We blend challenging mecha
 </body>
 
 </html>
+
