--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
 
                 <div class="w-full lg:w-1/2">
                     <span class="text-sm font-medium text-indigo-400 uppercase tracking-widest mb-2 block">Available 7th December 2025.</span>
-                    <h2 class="text-4xl sm:text-5xl md:text-6xl font-extrabold tracking-tight">
+                    <h2 class="text-4xl sm:text-5xl md:text-6xl font-extrabold tracking-tight text-white">
                         Wizardsbane
                     </h2>
+
 
                     <p class="text-gray-300 mb-6 text-lg">
                         Wizardsbane is a 2D pixel art metroidvania where you play as a knight navigating a cursed castle. Utilize swift dashes, wall climbs, and double jumps to carve your path through forgotten halls, toxic sewers, and more.
@@ -292,4 +293,5 @@ Moonlight Studios creates focused, story-first games. We blend challenging mecha
 </body>
 
 </html>
+
 
