--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         </li>
                     </ul>
 
-                    <a href="#" class="inline-flex items-center px-8 py-3 font-semibold text-white bg-violet-600 rounded-full hover:bg-violet-700 cta-button">
+                    <a href="https://moonlight-studios-1.itch.io/wizardsbane" class="inline-flex items-center px-8 py-3 font-semibold text-white bg-violet-600 rounded-full hover:bg-violet-700 cta-button">
                         View Game Page
                         <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
                     </a>
@@ -293,5 +293,6 @@ Moonlight Studios creates focused, story-first games. We blend challenging mecha
 </body>
 
 </html>
+
 
 
