--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         }
 
         /* Transparent header at top */
-        #site-header {
+        .header {
             background-color: rgba(0,0,0,0);
             transition: background-color 0.3s ease, border-bottom 0.3s ease;
         }
@@ -277,3 +277,4 @@
 
 </body>
 </html>
+
