--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         }
 
         /* Transparent header at top */
-        .header {
+        #header {
             background-color: transparent !important;
             border-bottom: none !important;
             transition: none; /* optional, remove smooth effect */
@@ -268,5 +268,6 @@
 
 </body>
 </html>
+
 
 
