--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body class="antialiased">
 
-    <header id="site-header" class="container mx-auto px-4 sm:px-6 lg:px-8 py-6 flex justify-between items-center z-10 relative">
+    <header id="site-header" class="container mx-auto px-4 sm:px-6 lg:px-8 py-6 flex justify-between items-center z-10 relative bg-transparent border-none">
         <div class="flex items-center space-x-2">
             <img src="Icon-removebg-preview.png" alt="" width="64" style="margin-right: 25px;">
             <h1 class="text-2xl font-bold text-white tracking-wider">Moonlight Studios</h1>
@@ -268,6 +268,7 @@
 
 </body>
 </html>
+
 
 
 
