--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     </style>
 </head>
-<body class="antialiased">
+<body class="antialiased moon-glow">
     <header id="site-header" class="container mx-auto px-4 sm:px-6 lg:px-8 py-6 flex justify-between items-center z-10 relative bg-transparent border-none">
         <div class="flex items-center space-x-2">
             <img src="Icon-removebg-preview.png" alt="" width="64" style="margin-right: 25px;">
@@ -63,7 +63,7 @@
         <section class="py-24 text-center relative overflow-hidden">
             <div class="relative z-10">
                 <h2 class="text-5xl sm:text-7xl font-extrabold text-white mb-6 leading-tight">
-                    <span class="block moon-glow">Moonlight Studios</span>
+                    <span class="block ">Moonlight Studios</span>
                 </h2>
                 <p class="text-xl sm:text-2xl text-indigo-200 mb-10 max-w-3xl mx-auto">
                     Handcrafted Pixel Worlds.
@@ -263,6 +263,7 @@
 
 </body>
 </html>
+
 
 
 
