--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     </style>
 </head>
-<body class="antialiased moon-glow">
+<body class="antialiased">
     <header id="site-header" class="container mx-auto px-4 sm:px-6 lg:px-8 py-6 flex justify-between items-center z-10 relative bg-transparent border-none">
         <div class="flex items-center space-x-2">
             <img src="Icon-removebg-preview.png" alt="" width="64" style="margin-right: 25px;">
@@ -263,6 +263,7 @@
 
 </body>
 </html>
+
 
 
 
