--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
                 </a>
             </div>
         
-            <!-- Subtle centered glow -->
+            <!-- Wider, subtle centered glow -->
             <div class="absolute inset-0 flex justify-center items-center pointer-events-none">
-                <div class="w-100 h-40 sm:w-140 sm:h-56 bg-indigo-700 rounded-full opacity-20 blur-2xl"></div>
+                <div class="w-60 h-60 sm:w-72 sm:h-72 bg-indigo-700 rounded-full opacity-20 blur-2xl"></div>
             </div>
         </section>
+
 
 
 
@@ -266,6 +267,7 @@
 
 </body>
 </html>
+
 
 
 
