--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
     </header>
 
     <main class="container mx-auto px-4 sm:px-6 lg:px-8">
-        
         <section class="py-24 text-center relative overflow-hidden">
             <div class="relative z-10">
                 <h2 class="text-5xl sm:text-7xl font-extrabold text-white mb-6 leading-tight">
@@ -73,14 +72,11 @@
                 </a>
             </div>
         
-            <!-- Wider, subtle centered glow -->
+            <!-- Wider, stronger horizontal glow -->
             <div class="absolute inset-0 flex justify-center items-center pointer-events-none">
-                <div class="w-60 h-60 sm:w-72 sm:h-72 bg-indigo-700 rounded-full opacity-20 blur-2xl"></div>
+                <div class="w-[40rem] h-60 sm:w-[50rem] sm:h-60 bg-indigo-700 rounded-full opacity-35 blur-2xl"></div>
             </div>
         </section>
-
-
-
 
         <section id="projects" class="pt-16 pb-24">
             <h3 class="text-4xl font-bold text-center text-indigo-400 mb-12">Featured Project</h3>
@@ -267,6 +263,7 @@
 
 </body>
 </html>
+
 
 
 
