--- a/index.html
+++ b/index.html
@@ -255,14 +255,17 @@
             <p class="text-gray-500 text-sm">&copy; 2025 Moonlight Studios. All rights reserved.</p>
         </div>
     </footer>
-
+    
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <script>
-        // Activate lucide icons
-        lucide.replace();
+        document.addEventListener("DOMContentLoaded", function() {
+            lucide.replace();
+        });
     </script>
 
 </body>
 </html>
+
 
 
 
