--- a/index.html
+++ b/index.html
@@ -249,10 +249,14 @@
                 </a>
                 
                 <a href="https://x.com/Moonlight2510_" class="text-gray-400 hover:text-indigo-400 transition" aria-label="Follow us on Twitter"><i data-lucide="twitter" class="w-6 h-6"></i></a>
-                <a href="https://www.youtube.com/@moonlightstudios2510/videos" class="text-gray-400 hover:text-indigo-400 transition" aria-label="Subscribe to our YouTube channel"><i data-lucide="youtube" class="w-6 h-6"></i></a>
+                <a href="https://www.youtube.com/@moonlightstudios2510/videos" class="text-gray-400 hover:text-indigo-400 transition" aria-label="Subscribe to our YouTube channel"><i data-lucide="youtube" class="w-6 h-6"></i></a>                
                 <a href="https://www.instagram.com/moonlight.studios2510/?next=%2F" class="text-gray-400 hover:text-indigo-400 transition" aria-label="Follow us on Instagram"><i data-lucide="instagram" class="w-6 h-6"></i></a>
+                <a href="#" class="text-gray-400 hover:text-indigo-400 transition" aria-label="Email us"><i class="fa-brands fa-discord"></i></i></a>
             </div>
             <p class="text-gray-500 text-sm">&copy; 2025 Moonlight Studios. All rights reserved.</p>
+            <div class="mt-2 text-xs text-gray-600">
+                <a href="#contact" class="hover:text-gray-400">Contact Us</a> | <a href="privacy_policy.html" class="hover:text-gray-400">Privacy Policy</a> | <a href="terms_of_service.html" class="hover:text-gray-400">Terms of Service</a>
+            </div>
         </div>
     </footer>
     
@@ -287,6 +291,7 @@
 
 </body>
 </html>
+
 
 
 
