Uawdadwpdate index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <img src="title.gif" 
                          alt="Concept art for Lunar Echoes, featuring a shadowy figure under a huge moon." 
                          class="w-full h-auto object-cover" 
-                         onerror="this.src='https://placehold.co/800x450/1e293b/a5b4fc?text=Loading+Failed';">
+                         onerror="this.src='https://placehold.co/800x450/1e293b/a5b4fc?text=Loading+Failed';" width="512">
                 </div>
 
                 <div class="w-full lg:w-1/2">
@@ -291,6 +291,7 @@
 
 </body>
 </html>
+
 
 
 
