--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
             <a href="#careers" class="text-gray-300 hover:text-indigo-400 transition duration-150">Careers</a>
             <a href="#contact" class="text-gray-300 hover:text-indigo-400 transition duration-150">Contact</a>
         </nav>
-        <button class="md:hidden text-gray-300 hover:text-indigo-400 transition duration-150">
+        <nav id="mobile-menu" class="md:hidden hidden flex-col space-y-4 mt-4 text-center">
+            <a href="#projects" class="text-gray-300 hover:text-indigo-400">Projects</a>
+            <a href="#devlogs" class="text-gray-300 hover:text-indigo-400">Devlogs</a>
+            <a href="#about" class="text-gray-300 hover:text-indigo-400">About Us</a>
+            <a href="#careers" class="text-gray-300 hover:text-indigo-400">Careers</a>
+            <a href="#contact" class="text-gray-300 hover:text-indigo-400">Contact</a>
+        </nav>
+            <button id="mobile-menu-button" class="md:hidden text-gray-300 hover:text-indigo-400 transition duration-150">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
         </button>
     </header>
@@ -285,12 +292,20 @@
                 viewMoreButton.classList.add('hidden');
             });
         }
-        
+         // Mobile menu toggle
+        const mobileButton = document.getElementById("mobile-menu-button");
+        const mobileMenu = document.getElementById("mobile-menu");
+        
+        mobileButton.addEventListener("click", () => {
+            mobileMenu.classList.toggle("hidden");
+        });
+
         // The form submission handler remains removed, relying on Formspree
     </script>
 
 </body>
 </html>
+
 
 
 
