New devlog added

--- a/index.html
+++ b/index.html
@@ -138,6 +138,15 @@
             <h3 class="text-4xl font-bold text-center text-indigo-400 mb-12">Devlogs & Studio Updates</h3>
             <div id="devlog-container" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="bg-gray-800 p-6 rounded-xl shadow-xl border-t-2 border-violet-500 hover:scale-[1.02] transition duration-300">
+                    <p class="text-sm text-gray-500 mb-2">Devember 3, 2025</p>
+                    <h4 class="text-xl font-semibold text-white mb-3">Wizardsbane - final devlog before launch</h4>
+                    <p class="text-gray-400 mb-4">Wizardsbane launches on December 7th, featuring smarter enemies, a bigger map, improved bosses, new NPCs, a revamped shop, and all major bugs fixed.</p>
+                    <a href="https://moonlight-studios-1.itch.io/wizardsbane/devlog/953153/wizardsbane-devlog-1" class="text-indigo-400 hover:text-indigo-300 text-sm font-medium flex items-center">
+                        Read More 
+                        <i data-lucide="chevron-right" class="w-4 h-4 ml-1"></i>
+                    </a>
+                </div>
+                <div class="bg-gray-800 p-6 rounded-xl shadow-xl border-t-2 border-violet-500 hover:scale-[1.02] transition duration-300">
                     <p class="text-sm text-gray-500 mb-2">May 26, 2025</p>
                     <h4 class="text-xl font-semibold text-white mb-3">Introducing Wizardsbane!</h4>
                     <p class="text-gray-400 mb-4">We've nailed core player movement (dashing, double jump, wall jump) and implemented simple, satisfying combat with basic enemy AI.</p>
@@ -316,4 +325,5 @@
 
 </body>
 </html>
+
 
